<resources>

    <string name="app_name">রমজানের সময়সূচী</string>

    <string name="devision"> বিভাগ</string>
    <string name="tajbi"> তসবিহ</string>
    <string name="doa">দোয়া</string>
    <string name="hadis"> হাদিস</string>
    <string name="allah_name_of_allah">আল্লাহ্‌র ৯৯টি নাম</string>
    <string name="niyot">নামাজের নিয়ত</string>
    <string name="sura">প্রয়োজনীয় সূরা</string>
    <string name="rules_of_prayer"> নামাজের নিয়ম</string>
    <string name="kalema"> কালেমা</string>
    <string name="q_a"> ইফতারের রেসিপি</string>

    <!--    jikir_list-->


    <string name="jikir_1">সুব হা-নাল্লাহ </string>
    <string name="jikir_2">আল-হামদুলিল্লাহ্‌ </string>
    <string name="jikir_3">লা-ইলাহ ইল্লাল্লা-হ</string>
    <string name="jikir_4">আল্লাহু আকবার</string>

    <!--    all division name-->
    <string name="dhaka">ঢাকা বিভাগ</string>
    <string name="rangpur">রংপুর বিভাগ</string>
    <string name="rajshahi">রাজশাহী বিভাগ</string>
    <string name="chottagram">চট্টগ্রাম বিভাগ</string>
    <string name="khulna">খুলনা বিভাগ</string>
    <string name="sylhet">সিলেট বিভাগ</string>
    <string name="barishal">বরিশাল বিভাগ</string>
    <string name="moymonsingho">ময়মনসিংহ বিভাগ</string>

    <!--    dhaka all distric-->
    <string name="dhaka_dis">ঢাকা</string>
    <string name="kishorgong">কিশোরগঞ্জ </string>
    <string name="gajipur">গাজীপুর</string>
    <string name="gopalgong">গোপালগঞ্জ</string>
    <string name="tangail">টাঙ্গাইল</string>
    <string name="norsingdi">নরসিংদী</string>
    <string name="naraongonj">নারায়নগঞ্জ</string>
    <string name="foridpur">ফরিদপুর</string>
    <string name="madaripur">মাদারিপুর</string>
    <string name="manikgonj">মানিকগঞ্জ</string>
    <string name="munshigonj">মুন্সিগঞ্জ</string>
    <string name="rajbari">রাজবাড়ী </string>
    <string name="shoriyotpur">শরীয়তপুর</string>

    <!--    rangpur all distric-->
    <string name="rangpur_dis">রংপুর</string>
    <string name="kuriggram">কুড়িগ্রাম </string>
    <string name="lalmonirhat">লালমনিরহাট</string>
    <string name="gaibanda">গাইবান্ধা</string>
    <string name="dinajpur">দিনাজপুর</string>
    <string name="panchagarh">পঞ্চগড়</string>
    <string name="thakurgoun">ঠাকুরগাঁও</string>
    <string name="nilfamari">নীলফামারী</string>

    <!--    dhaka all distric-->
    <string name="chattrogram_dis">চট্টগ্রাম</string>
    <string name="cox_bazar">কক্সবাজার </string>
    <string name="bandarban">বান্দরবন</string>
    <string name="chadpur">চাঁদপুর</string>
    <string name="brammonbariya">ব্রাহ্মণবাড়িয়া</string>
    <string name="rangamati">রাঙ্গামাটি</string>
    <string name="lokkhipur">লক্ষ্মীপুর</string>
    <string name="noyakhali">নোয়াখালী</string>
    <string name="feni">ফেনী</string>
    <string name="khagrachory">খাগড়াছড়ি</string>
    <string name="cumillah">কুমিল্লা </string>

    <!--    rajshahi all distric-->
    <string name="rajshahi_dis">রাজশাহী</string>
    <string name="sirajgonj">সিরাজগঞ্জ </string>
    <string name="pabna">পাবনা</string>
    <string name="bogura">বগুড়া</string>
    <string name="nator">নাটোর</string>
    <string name="joypurhat">জয়পুরহাট</string>
    <string name="chapainobabgonj">চাঁপাইনবাবগঞ্জ</string>
    <string name="nouga">নওগাঁ</string>

    <!--    khulna all distric-->
    <string name="khulna_dis">খুলনা</string>
    <string name="josor">যশোর </string>
    <string name="satkhira">সাতক্ষীরা</string>
    <string name="meherpur">মেহেরপুর</string>
    <string name="norail">নড়াইল</string>
    <string name="chuyadanga">চুয়াডাঙ্গা</string>
    <string name="kustiya">কুষ্টিয়া</string>
    <string name="magura">মাগুরা</string>
    <string name="bagerhat">বাগেরহাট</string>
    <string name="jinaidoho">ঝিনাইদ</string>

    <!--    borishal all distric-->
    <string name="borishal">বরিশাল</string>
    <string name="jalkati">ঝালকাঠি </string>
    <string name="ptuyakhali">পটুয়াখালী</string>
    <string name="pirojpur">পিরোজপুর</string>
    <string name="vola">ভোলা</string>
    <string name="borguna">বরগুনা</string>

    <!--    sylhet all distric-->
    <string name="sylhet_dis">সিলেট</string>
    <string name="moulovibazar">মৌলভীবাজার </string>
    <string name="hobigonj">হবিগঞ্জ</string>
    <string name="sunamgonj">সুনামগঞ্জ</string>

    <!--    moymonsingho all distric-->
    <string name="moymonsingh_dis">ময়মনসিংহ</string>
    <string name="sherpur">শেরপুর </string>
    <string name="jamalpur">জামালপুর</string>
    <string name="netrokona">নেত্রকোণা</string>

    <!-- doa name -->
    <string name="doa_1">সেহরির দোয়া </string>
    <string name="doa_2"> ইফতারের করার সময় যে দোয়া পড়বেন </string>
    <string name="doa_3">আযান শোনার পরে পড়ার দোয়া</string>
    <string name="doa_4">ওযুর শেষে পড়ার দোয়া</string>
    <string name="doa_5">বংশধরদের জন্য দোয়া </string>
    <string name="doa_6">নেক আমল কবুল হওয়ার দোয়া </string>
    <string name="doa_7"> নেককার ও সাহীদগনের অন্তর্ভুক্ত হওয়ার জন্য বিশ্বাসী বান্দাগণের দোয়া</string>
    <string name="doa_8">কোন শহরে হিজরত বা প্রবেশের দোয়া </string>
    <string name="doa_9">দ্বীনের উপর অবিচল থাকার দোয়া </string>
    <string name="doa_10"> মুসিবত আপতিত হলে পাঠ করার দোয়া</string>
    <string name="doa_11">পিতা-মাতা, বংশধর ও মু’মিনীনদের জন্য হযরত ইব্রাহীম (আলাইহিসসালাম) এর দোয়া </string>
    <string name="doa_12">ঈমানের নুরে পরিপূর্ণতা লাভের আশায় ঈমানদার বান্দাগণের প্রার্থনা </string>
    <string name="doa_13">জাহান্নাম থেকে বাঁচার জন্য পরম করুণাময় আল্লাহর বান্দাগণের দোয়া </string>
    <string name="doa_14">ক্ষমাপ্রার্থনার দোয়া </string>
    <string name="doa_15"> মসজিদ থেকে বের হবার দোয়া </string>
    <string name="doa_16">মসজিদে প্রবেশের দোয়া </string>

    <string name="open">open</string>
    <string name="close">close</string>


    <string name="romjan">রমজান </string>

    <string name="date">তারিখ </string>

    <string name="sehri">সেহরির শেষ সময় </string>

    <string name="iftar">ইফতারের সময় </string>

    <!--day-->


    <string name="romjan_1">01 </string>

    <string name="romjan_2">02 </string>

    <string name="romjan_3">03 </string>

    <string name="romjan_4">04 </string>

    <string name="romjan_5">05 </string>

    <string name="romjan_6">06 </string>

    <string name="romjan_7"> 07 </string>

    <string name="romjan_8">08 </string>

    <string name="romjan_9">09 </string>

    <string name="romjan_10">10 </string>

    <string name="romjan_11">11 </string>

    <string name="romjan_12">12 </string>

    <string name="romjan_13">13 </string>

    <string name="romjan_14">14 </string>

    <string name="romjan_15">15 </string>

    <string name="romjan_16">16 </string>

    <string name="romjan_17">17 </string>

    <string name="romjan_18">18 </string>

    <string name="romjan_19">19 </string>

    <string name="romjan_20">20 </string>

    <string name="romjan_21">21 </string>

    <string name="romjan_22">22 </string>

    <string name="romjan_23">23</string>

    <string name="romjan_24">24 </string>

    <string name="romjan_25">25 </string>

    <string name="romjan_26">26 </string>

    <string name="romjan_27">27 </string>

    <string name="romjan_28">28 </string>

    <string name="romjan_29">29 </string>

    <string name="romjan_30">30 </string>

    <!--date-->


    <string name="date_01"> ২৪ মার্চ </string>

    <string name="date_02"> ২৫ মার্চ </string>

    <string name="date_03"> ২৬ মার্চ </string>

    <string name="date_04"> ২৭ মার্চ </string>

    <string name="date_05"> ২৮ মার্চ </string>

    <string name="date_06"> ২৯ মার্চ </string>

    <string name="date_07"> ৩০ মার্চ </string>

    <string name="date_08"> ৩১ মার্চ </string>

    <string name="date_09"> ০১ এপ্রিল </string>

    <string name="date_10"> ০২ এপ্রিল </string>

    <string name="date_11"> ০৩ এপ্রিল </string>

    <string name="date_12"> ০৪ এপ্রিল </string>

    <string name="date_13"> ০৫ এপ্রিল </string>

    <string name="date_14"> ০৬ এপ্রিল </string>

    <string name="date_15"> ০৭ এপ্রিল </string>

    <string name="date_16"> ০৮ এপ্রিল </string>

    <string name="date_17"> ০৯ এপ্রিল </string>

    <string name="date_18"> ১০ এপ্রিল </string>

    <string name="date_19"> ১১ এপ্রিল </string>

    <string name="date_20"> ১২ এপ্রিল </string>

    <string name="date_21"> ১৩ এপ্রিল </string>

    <string name="date_22"> ১৪ এপ্রিল </string>

    <string name="date_23"> ১৫ এপ্রিল </string>

    <string name="date_24"> ১৬ এপ্রিল </string>

    <string name="date_25"> ১৭ এপ্রিল </string>

    <string name="date_26"> ১৮ এপ্রিল </string>

    <string name="date_27"> ১৯ এপ্রিল </string>

    <string name="date_28"> ২০ এপ্রিল </string>

    <string name="date_29"> ২১ এপ্রিল </string>

    <string name="date_30"> ২২ এপ্রিল </string>



</resources>