<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".first_btn.doa_all_list"
    android:orientation="vertical"
    android:background="@drawable/background">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        android:background="#29B6F6">

        <ImageView
            android:id="@+id/back_doa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/back_icon"
            android:layout_gravity="left"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="page name"
            android:textStyle="bold"
            android:textSize="30dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="#000000"/>

        <ImageView
            android:id="@+id/home_doa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/home_icon"
            android:layout_gravity="right"
            android:layout_marginRight="15dp"/>


    </androidx.appcompat.widget.Toolbar>
    <!-- Image Slider  -->
    <LinearLayout
        android:id="@+id/layImageSlider"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="vertical">

        <com.denzcoskun.imageslider.ImageSlider
            android:id="@+id/image_slider"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:iss_auto_cycle="true"
            app:iss_period="1000"
            app:iss_placeholder="@drawable/ic_launcher_foreground"
            app:iss_error_image="@drawable/ic_launcher_background"
            app:iss_delay="0"/>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_dua_1"
            android:layout_margin="5sp"
            android:padding="10sp"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="@string/doa_1"
            android:textSize="20sp"
            android:background="@drawable/button_desing"/>
        <Button
            android:id="@+id/btn_dua_2"
            android:layout_margin="5sp"
            android:padding="10sp"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="@string/doa_2"
            android:textSize="20sp"
            android:background="@drawable/button_desing"/>
        <Button
            android:id="@+id/btn_dua_3"
            android:layout_margin="5sp"
            android:padding="10sp"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="@string/doa_3"
            android:textSize="20sp"
            android:background="@drawable/button_desing"/>
        <Button
            android:id="@+id/btn_dua_4"
            android:layout_margin="5sp"
            android:padding="10sp"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="@string/doa_4"
            android:textSize="20sp"
            android:background="@drawable/button_desing"/>
        <Button
            android:id="@+id/btn_dua_5"
            android:layout_margin="5sp"
            android:padding="10sp"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="@string/doa_5"
            android:textSize="20sp"
            android:background="@drawable/button_desing"/>
        <Button
            android:id="@+id/btn_dua_6"
            android:layout_margin="5sp"
            android:padding="10sp"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="@string/doa_6"
            android:textSize="20sp"
            android:background="@drawable/button_desing"/>
        <Button
            android:id="@+id/btn_dua_7"
            android:layout_margin="5sp"
            android:padding="10sp"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="@string/doa_7"
            android:textSize="20sp"
            android:background="@drawable/button_desing"/>
        <Button
            android:id="@+id/btn_dua_8"
            android:layout_margin="5sp"
            android:padding="10sp"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="@string/doa_8"
            android:textSize="20sp"
            android:background="@drawable/button_desing"/>
        <Button
            android:id="@+id/btn_dua_9"
            android:layout_margin="5sp"
            android:padding="10sp"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="@string/doa_9"
            android:textSize="20sp"
            android:background="@drawable/button_desing"/>
        <Button
            android:id="@+id/btn_dua_10"
            android:layout_margin="5sp"
            android:padding="10sp"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="@string/doa_10"
            android:textSize="20sp"
            android:background="@drawable/button_desing"/>
        <Button
            android:id="@+id/btn_dua_11"
            android:layout_margin="5sp"
            android:padding="10sp"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="@string/doa_11"
            android:textSize="20sp"
            android:background="@drawable/button_desing"/>
        <Button
            android:id="@+id/btn_dua_12"
            android:layout_margin="5sp"
            android:padding="10sp"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="@string/doa_12"
            android:textSize="20sp"
            android:background="@drawable/button_desing"/>
        <Button
            android:id="@+id/btn_dua_13"
            android:layout_margin="5sp"
            android:padding="10sp"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="@string/doa_13"
            android:textSize="20sp"
            android:background="@drawable/button_desing"/>
        <Button
            android:id="@+id/btn_dua_14"
            android:layout_margin="5sp"
            android:padding="10sp"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="@string/doa_14"
            android:textSize="20sp"
            android:background="@drawable/button_desing"/>
        <Button
            android:id="@+id/btn_dua_15"
            android:layout_margin="5sp"
            android:padding="10sp"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="@string/doa_15"
            android:textSize="20sp"
            android:background="@drawable/button_desing"/>
        <Button
            android:id="@+id/btn_dua_16"
            android:layout_margin="5sp"
            android:padding="10sp"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="@string/doa_16"
            android:textSize="20sp"
            android:background="@drawable/button_desing"/>


    </LinearLayout>
    </ScrollView>
</LinearLayout>